# django-registration

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.rst  confusables.json  noxfile.py  pyproject.toml  runtests.py  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: ci.yml
docs/: activation-workflow.rst  conf.py  custom-user.rst  default-workflow.rst  deprecations.rst  docs_settings.py  exceptions.rst  faq.rst  forms.rst  hmac.rst  index.rst  install.rst  model-workflow.rst  one-step-workflow.rst  quickstart.rst  security.rst  settings.rst  signals.rst  simple-workflow.rst  spelling_wordlist.txt  upgrade.rst  validators.rst  views.rst
registration/: __init__.py  admin.py  auth_urls.py  auth_urls_classes.py  auth_urls_functions.py  exceptions.py  forms.py  models.py  runtests.py  signals.py  urls.py  utils.py  validators.py  views.py
registration/backends/default/: __init__.py  urls.py  views.py
registration/backends/hmac/: __init__.py  urls.py  views.py
registration/backends/model_activation/: __init__.py  urls.py  views.py
registration/backends/simple/: __init__.py  urls.py  views.py
registration/locale/es/LC_MESSAGES/: django.mo  django.po
registration/locale/fa/LC_MESSAGES/: django.mo  django.po
registration/locale/uk/LC_MESSAGES/: django.mo
registration/locale/uk_UA/LC_MESSAGES/: django.po
registration/management/commands/: cleanupregistration.py  deleteusedregistrations.py
registration/migrations/: 0001_initial.py
registration/tests/: base.py  default_backend.py  forms.py  models.py  simple_backend.py  test_default_backend.py  test_django_auth_integration.py  test_forms.py  test_hmac_backend.py  test_hmac_workflow.py  test_model_backend.py  test_model_workflow.py  test_models.py  test_password_reset.py  test_sending_email.py  test_simple_backend.py  test_simple_workflow.py  test_views.py  urls.py  views.py
registration/tests/templates/registration/: activation_email.txt  activation_email_subject.txt  password_reset_email.txt
src/django_registration/: __init__.py  exceptions.py  forms.py  signals.py  validators.py  views.py
src/django_registration/backends/activation/: __init__.py  urls.py  views.py
src/django_registration/backends/hmac/: urls.py  views.py
src/django_registration/backends/one_step/: __init__.py  urls.py  views.py
src/django_registration/locale/es/LC_MESSAGES/: django.po
src/django_registration/locale/fr/LC_MESSAGES/: django.mo  django.po
src/django_registration/locale/id/LC_MESSAGES/: django.mo  django.po
src/django_registration/locale/ko/LC_MESSAGES/: django.mo  django.po
src/django_registration/locale/pt_BR/LC_MESSAGES/: django.po
src/django_registration/migrations/: 0001_initial.py
tests/: base.py  models.py  settings.py  test_activation_workflow.py  test_forms.py  test_hmac_workflow.py  test_one_step_workflow.py  test_simple_workflow.py  test_views.py  urls.py  views.py
tests/migrations/: 0001_initial.py
tests/templates/django_registration/: activation_email_body.txt  activation_email_subject.txt
tests/templates/registration/: activation_email_subject.txt
tests/urls/: custom_user_activation.py  custom_user_one_step.py  view_tests.py
