[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:report]
fail_under = 100
exclude_lines = 
    pragma: no cover
    def __str__
    raise NotImplementedError

[flake8]
exclude = locale,__pycache__,.pyc,templates
max-complexity = 10

[isort]
known_first_party = django_registration
known_third_party = django
lines_after_imports = 2
