[metadata]
license_file = LICENSE

[coverage:paths]
source =
  src
  .tox/*/site-packages

[coverage:report]
fail_under = 100
exclude_lines = 
    pragma: no cover
    def __str__
    raise NotImplementedError

[flake8]
extend-ignore = E203
max-complexity = 10
max-line-length = 88

[isort]
profile = black

[check-manifest]
ignore =
  __pycache__
  *.pyc
ignore-bad-ideas =
  *.mo
